hphp/hack/test/typecheck/modules/module_level_traits_internal_1.bad.php.exp
File "module_level_traits_internal_1.bad.php--A.php", line 7, characters 1-42:
Internal modules cannot have the <<__ModuleLevelTrait>> attribute (Naming[2127])
