hphp/hack/test/typecheck/modules/module_level_traits_internal_1.bad.php
//// module_A.php
<?hh
new module A {}

//// A.php
<?hh

module A;

<<file: __EnableUnstableFeatures('module_level_traits')>>

<<__ModuleLevelTrait>>
internal trait T {}
